--- a/sass/webfonts.scss
+++ b/sass/webfonts.scss
@@ -1,34 +1,34 @@
 @font-face {
-  font-family: 'concourse_t3regular';
+  font-family: 'concourse';
   src: url('../fonts/concourse_t3_regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'concourse_t3italic';
+  font-family: 'concourse';
   src: url('../fonts/concourse_t3_italic-webfont.woff') format('woff');
   font-weight: normal;
-  font-style: normal;
+  font-style: italic;
 }
 
 @font-face {
-  font-family: 'concourse_c3regular';
+  font-family: 'concourse_c3';
   src: url('../fonts/concourse_c3_regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'concourse_c3bold';
+  font-family: 'concourse_c3';
   src: url('../fonts/concourse_c3_bold-webfont.woff') format('woff');
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'concourse_t3bold';
+  font-family: 'concourse';
   src: url('../fonts/concourse_t3_bold-webfont.woff') format('woff');
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
 }
