--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,20 +3,32 @@
 @import "neat/neat";
 @import "webfonts";
 
+$max-width: em(800);
 body { font-size:1.3em }
+
 // Layout
+
+body {
+  padding-top:2.6em;
+}
 
 div#outer-container {
   @include outer-container;
+  padding:0 1em;
+}
+
+h1, h2 {
+  @include span-columns(8)
 }
 
 p {
   @include span-columns(8);
-  margin: 1.3em 0;
+  margin:0.65em 0;
 }
 
 img {
   width:100%;
+  margin:0.65em 0 1.3em 0;
 }
 
 // Type
@@ -24,6 +36,20 @@ img {
 body {
   font-family:'concourse';
   line-height:1.3em;
+}
+
+h1 {
+  font-size:2em;
+  line-height:2.6em;
+  font-family:'concourse_c3';
+  font-weight:bold;
+}
+
+h2 {
+  font-family:'concourse_c3';
+  font-weight:bold;
+  font-size:1.5em;
+  line-height:1.5em;
 }
 
 em {
