--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,6 @@ body { font-size:1.5em }
 // Layout
 
 body {
-  padding-top:2.6em;
   padding-bottom:2.6em;
 }
 
@@ -22,13 +21,13 @@ section.main-body {
   @include span-columns(12);
 }
 
-h1, h2 {
+h1 {
   @include span-columns(8);
-  border-bottom:1px solid #dde;
 }
 
 header#page-header h1 {
-  padding-bottom:2.6em;
+  padding-top:1.3em;
+  padding-bottom:1.3em;
   border-bottom:none;
 }
 
@@ -38,10 +37,20 @@ p {
 }
 
 p.sidebar {
-  @include shift(1);
   @include span-columns(3);
-  @include omega();
   margin-top:1.07em;
+  @include shift(1);
+}
+
+h2.sidebar {
+  @include span-columns(3);
+  @include shift(9);
+  margin-top:0.65em;
+}
+
+h2 + p {
+  @include span-columns(8);
+  @include shift(-12);
 }
 
 img {
@@ -69,7 +78,6 @@ h1 {
 
 h2 {
   font-family:'concourse_c3';
-  font-size:1.3em;
   line-height:1.3em;
 }
 
@@ -92,6 +100,6 @@ body {
   color:#556;
 }
 
-p.sidebar {
+.sidebar {
   color:#3B95CF;
 }
