--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,7 +54,8 @@ ol {
 
 p.sidebar {
   @include span-columns(3);
-  margin-top:1.07em;
+  margin-top:1.24em;
+  text-align:right;
   @include shift(1);
 }
 
