--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,15 +54,17 @@ ol {
 
 p.sidebar {
   @include span-columns(3);
-  margin-top:1.24em;
+  margin-top:1.1em;
   text-align:right;
   @include shift(1);
+  @include omega();
 }
 
 h2.sidebar {
   @include span-columns(3);
   @include shift(9);
   margin-top:0.62em;
+  text-align:right;
 }
 
 h2 + p {
@@ -107,8 +109,8 @@ em, dfn {
 }
 
 p.sidebar {
-  font-size:0.7em;
-  line-height:1.433em;
+  font-size:0.69em;
+  line-height:1.443em;
 }
 
 // Color
