--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,9 @@
 $max-width: em(699);
 $sidebar-color: #3498db;
 $body-color: #556;
+$mobile: new-breakpoint(max-width 820px 4);
 
-body { font-size:1.35em }
+body { font-size:1.33em }
 
 // Layout
 
@@ -25,6 +26,9 @@ nav {
   font-size:0.88em;
   color:black;
   border-bottom:1px solid #d2d7d3;
+  @include media($mobile) {
+    @include span-columns(4);
+  }
 
   &.bottom-nav {
     border-bottom:none;
@@ -33,11 +37,14 @@ nav {
   }
 
   a {
-    display:box;
     @include span-columns(5);
     text-decoration:none;
     color:$body-color;
     padding:1em 0;
+      @include media($mobile) {
+        @include span-columns(4);
+        padding:0.5em 0;
+      }
 
     &:hover {
       background-color:#f8f8f8;
@@ -47,21 +54,37 @@ nav {
   
   a.previous {
     padding-left:1em;
+    @include media($mobile) {
+      text-align:center;
+      padding-left:0;
+    }
   }
 
   a.top {
     @include span-columns(2);
     text-align:center;
+    @include media($mobile) {
+      @include span-columns(4);
+      border-top:1px solid #d2d7d3;
+      border-bottom:1px solid #d2d7d3;
+    }
   }
 
   a.next {
     text-align:right;
     padding-right:1em;
+    @include media($mobile) {
+      text-align:center;
+      padding-right:0;
+    }
   }
 }
 
 h1 {
   @include span-columns(8);
+    @include media($mobile) {
+      @include span-columns(4);
+    }
 }
 
 header#page-header h1 {
@@ -73,14 +96,20 @@ header#page-header h1 {
 p {
   @include span-columns(8);
   margin:0.65em 0;
+  @include media($mobile) {
+    @include span-columns(4);
+  }
 }
 
 ul, ol {
-  @include shift(1);
   @include span-columns(7);
   font-size:0.88em;
   margin-top:0.65em;
   margin-bottom:0.65em;
+  margin-left:2em;
+  @include media($mobile) {
+    @include span-columns(3);
+  }
 }
 
 ul {
@@ -97,6 +126,11 @@ p.sidebar {
   text-align:right;
   @include shift(1);
   @include omega();
+  @include media($mobile) {
+    @include span-columns(4);
+    @include shift(0);
+    text-align:left;
+  }
 }
 
 h2.sidebar {
@@ -104,11 +138,21 @@ h2.sidebar {
   @include shift(9);
   margin-top:0.65em;
   text-align:right;
+  @include media($mobile) {
+    font-size:1.36em;
+    @include span-columns(4);
+    text-align:left;
+    @include shift(0);
+  }
 }
 
 h2 + p {
   @include span-columns(8);
   @include shift(-12);
+  @include media($mobile) {
+    @include span-columns(4);
+    @include shift(0);
+  }
 }
 
 img {
@@ -126,7 +170,7 @@ img.double {
 
 body {
   font-family:'concourse';
-  line-height:1.45em;
+  line-height:1.47em;
 }
 
 h1 {
