--- a/sass/main.scss
+++ b/sass/main.scss
@@ -196,12 +196,14 @@ p.sidebar {
   line-height:1.443em;
 }
 
-body.title-page h1 {
+body.title-page header#page-header h1 {
   font-size:3.3em;
-  margin-top:1em;
+  padding-bottom:0.1em;
+  padding-top:2em;
   @include media($mobile) {
     font-size:2em;
     margin-top:0;
+    padding-top:1em;
   }
 }
 
@@ -210,6 +212,7 @@ body.title-page p {
   text-transform:lowercase;
   font-size:1.25em;
   font-family:'concourse_c3';
+  margin-bottom:1.6em;
   @include media($mobile) {
     @include span-columns(4);
   }
